// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedHeader component matches the snapshot with city data 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-4"
    >
      <h2
        id="title"
      >
        Избранное
      </h2>
    </div>
    <div
      className="col-lg-6"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          id="inputfld"
          placeholder="Город"
        />
        <input
          id="update-button"
          type="submit"
          value="Добавить в избранное"
        />
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-lg-4"
        >
          <h2
            id="cityname"
          >
            Irkutsk
          </h2>
        </div>
        <div
          className="col-lg-6"
        >
          <div
            className="row"
            
          >
            <p>
              Погода
            </p>
            <div
              id="minival"
            >
              light rain
            </div>
          </div>
          <div
            className="row"
            
          >
            <p>
              Давление
            </p>
            <div
              id="minival"
            >
              1021
               hPa
            </div>
          </div>
          <div
            className="row"
            
          >
            <p>
              Скорость ветра
            </p>
            <div
              id="minival"
            >
               
              5.1
               m/s
            </div>
          </div>
          <div
            className="row"
            
          >
            <p>
              Облачность
            </p>
            <div
              id="minival"
            >
               
              90
               %
            </div>
          </div>
        </div>
        <div
          className="col-lg-2"
        >
          <button
            className="close"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SavedHeader component matches the snapshot with loader 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-4"
    >
      <h2
        id="title"
      >
        Избранное
      </h2>
    </div>
    <div
      className="col-lg-6"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          id="inputfld"
          placeholder="Город"
        />
        <input
          id="update-button"
          type="submit"
          value="Добавить в избранное"
        />
      </form>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-lg-12"
        >
          <h2
            id="waiting"
          >
            Подождите, данные загружаются
          </h2>
        </div>
        <div
          className="col-lg-12 "
        >
          <div
            className="center-block"
          >
            <div
              className="css-236bqq"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SavedHeader component matches the snapshot withought cities 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-lg-4"
    >
      <h2
        id="title"
      >
        Избранное
      </h2>
    </div>
    <div
      className="col-lg-6"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          id="inputfld"
          placeholder="Город"
        />
        <input
          id="update-button"
          type="submit"
          value="Добавить в избранное"
        />
      </form>
    </div>
  </div>
  <div
    className="row"
  />
</div>
`;
